--- a/src/index.html
+++ b/src/index.html
@@ -1,2 +1,3 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <my-app>loading</my-app>
